--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
+    <!--Header and Nav -->
     <header>
        <div>
          <h1>Portfolio</h1>
@@ -28,11 +29,13 @@
             </ul>
         </nav>
     </header>
+    <!-- Hero Image -->
     <section class="hero-image">
         <div> 
             <img src="./assets/images/IMG_0812.jpg" alt="An image of Michael">
         </div>
     </section>
+    <!--About Me -->
     <section id="about me" class="about-me">
         <div class="title">
             <h2>About Me</h2>
@@ -41,6 +44,7 @@
             <p>My name is Michael and I currently live in Raleigh N.C. I've enrolled in coding bootcamp program at University of North Carolina in Chapel Hill. This is my second challenge assignment in this program.</p>
         </div>
     </section>
+    <!-- Work -->
     <section id="work" class="Work">
         <div class="title">
             <h2>Work</h2>
@@ -80,6 +84,7 @@
                 </div>
             </div>
     </section>
+    <!-- Footer -->
 <footer id="contact me">
     <div class="title">
         <h2>Contact Me</h2>
